Mon Feb 18 14:41:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Util.h:
          Added a typedef to compile the code with BCB and GCC.

Mon Feb 18 14:29:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Util.h:
          Removed not needed typename which is causing problems with BCB.
          Thanks to Adam Mitz for noticing this typename

Mon Feb 18 14:13:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/transport/ReliableMulticast/detail/NackGenerator.h:
          Added missing include of iterator that is needed to get
          std::back_inserter

Tue Feb 12 19:10:52 UTC 2008  Brian Johnson  <johnsonb@stladvantage.com>

        * docs/design/UML/DDS.xmi:

          XMI version 1.1 file of the model DDS.uml.

        * docs/design/UML/readme.txt:

          Added note about this new file.

Thu Feb  7 19:10:42 UTC 2008  Brian Johnson  <johnsonb@stladvantage.com>

        * docs/design/UML:
        * docs/design/UML/DDS.uml:
        * docs/design/UML/Analysis.unt:
        * docs/design/UML/InDepthOverview.unt:
        * docs/design/UML/Overview.unt:

          Added UML model files generated from StarUML.  Provides
          a simple and more in depth Use Case view of Pub-Sub
          operations.

        * docs/design/UML/Create_DataReader_Detail.jpg:
        * docs/design/UML/Create_DataWriter_Detail.jpg:
        * docs/design/UML/Register_Sample_Detail.jpg:
        * docs/design/UML/Repo_Pub_Sub_Detail.jpg:
        * docs/design/UML/Send_Remote_Detail.jpg:
        * docs/design/UML/Write_Data_Detail.jpg:

          Jpgs generated from the more in depth Use Case view.

        * docs/design/UML/Create_DataReader_Simple.jpg:
        * docs/design/UML/Create_DataWriter_Simple.jpg:
        * docs/design/UML/Register_Sample_Simple.jpg:
        * docs/design/UML/Repo_Pub_Sub_Simple.jpg:
        * docs/design/UML/Send_Remote_Simple.jpg:
        * docs/design/UML/Write_Data_Simple.jpg:
