@@ -54,7 +54,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::remove (void)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     return -1;
 }
 
@@ -62,7 +62,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::bind (const char *name, void *pointer, int duplicates)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (name);
     ACE_UNUSED_ARG (pointer);
     ACE_UNUSED_ARG (duplicates);
@@ -73,7 +73,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::trybind (const char *name, void *&pointer)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (name);
     ACE_UNUSED_ARG (pointer);
     return -1;
@@ -83,7 +83,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::find (const char *name, void *&pointer)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (name);
     ACE_UNUSED_ARG (pointer);
     return -1;
@@ -93,7 +93,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::find (const char *name)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (name);
     return -1;
 }
@@ -102,7 +102,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::unbind (const char *name)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (name);
     return -1;
 }
@@ -111,7 +111,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::unbind (const char *name, void *&pointer)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (name);
     ACE_UNUSED_ARG (pointer);
     return -1;
@@ -121,7 +121,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::sync (ssize_t len, int flags)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (len);
     ACE_UNUSED_ARG (flags);
     return -1;
@@ -131,7 +131,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::sync (void *addr, size_t len, int flags)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (addr);
     ACE_UNUSED_ARG (len);
     ACE_UNUSED_ARG (flags);
@@ -142,7 +142,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::protect (ssize_t len, int prot)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (len);
     ACE_UNUSED_ARG (prot);
     return -1;
@@ -152,7 +152,7 @@ template <class T, std::size_t N>
 int
 FirstTimeFastAllocator<T, N>::protect (void *addr, size_t len, int prot)
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
     ACE_UNUSED_ARG (addr);
     ACE_UNUSED_ARG (len);
     ACE_UNUSED_ARG (prot);
@@ -165,7 +165,7 @@ template <class T, std::size_t N>
 void
 FirstTimeFastAllocator<T, N>::print_stats (void) const
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
 }
 #endif /* ACE_HAS_MALLOC_STATS */
 
@@ -173,7 +173,7 @@ template <class T, std::size_t N>
 void
 FirstTimeFastAllocator<T, N>::dump (void) const
 {/* no-op */
-    ACE_ASSERT(("not supported", false));
+    ACE_ASSERT("not supported" == reinterpret_cast<char*>(0));
 }
 
     } // namespace  ::DDS
